[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites.tscn" type="PackedScene" id=1]
[ext_resource path="res://AreaOfEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hiet.wav" type="AudioStream" id=4]
[ext_resource path="res://PotionDude.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 69.1994

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.43699
height = 2.40788

[node name="PotionDude" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="colored_transparent" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.133671, 0.476797 )
frame = 120

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="AreaOfEffect" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfEffect"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.427185, 5.12622 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_entered"]
[connection signal="area_exited" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_exited"]

[editable path="Hurtbox"]

[editable path="AreaOfEffect"]
